Improved virtualenv and data_packages for nbviewer

--- a/Packages for data analysis.ipynb
+++ b/Packages for data analysis.ipynb
@@ -8,125 +8,162 @@
   {
    "cells": [
     {
-     "cell_type": "heading",
-     "level": 1,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Installing Data analysis tools"
-     ]
-    },
-    {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "#create virtual environment\n",
-      "mkvirtualenv mypy3\n",
-      "\n",
-      "#IPython\n",
-      "pip install ipython[all]\n",
-      "\n",
-      "#Numpy\n",
-      "pip install numpy\n",
-      "\n",
-      "#Test numpy\n",
-      "pip install nose\n",
-      "python -c 'import numpy; numpy.test()'\n",
-      "\n",
-      "#Scipy\n",
-      "pip install scipy\n",
-      "\n",
-      "#Readline\n",
-      "easy_install readline\n",
-      "#Other dependencies\n",
-      "pip install python-dateutil sphinx pygments tornado\n"
-     ]
-    },
-    {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "#PySide\n",
-      "deactivate\n",
-      "sudo pip3 install pyside\n",
-      "workon mypy3\n",
-      "ln -s /usr/lib/python3/dist-packages/PySide $VIRTUAL_ENV/lib/python3/site-packages/PySide\n",
-      "\n",
-      "#If using Python2.7:\n",
-      "ln -s /usr/lib/python2.7/dist-packages/Py $VIRTUAL_ENV/lib/python2.7/site-packages/PySide\n",
-      "\n",
-      "#PyQt4\n",
-      "deactivate\n",
-      "sudo pip3 install pyqt4 \n",
-      "#or \n",
-      "sudo apt-get install python3-pyqt4\n",
-      "\n",
-      "workon mypy3\n",
-      "ln -s /usr/lib/python3/dist-packages/PyQt4 $VIRTUAL_ENV/lib/python3/site-packages/PyQt4\n",
-      "\n",
-      "#If using Python2.7:\n",
-      "ln -s /usr/lib/python2.7/dist-packages/PyQt4/ $VIRTUAL_ENV/lib/python2.7/site-packages/PyQt4"
-     ]
-    },
-    {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "#matplotlib\n",
-      "pip install matplotlib\n",
-      "\n",
-      "#Cython\n",
-      "pip install cython\n",
-      "\n",
-      "#scikits\n",
-      "pip install scikit-learn\n",
-      "pip install scikit-image\n",
-      "\n",
-      "#Pandas\n",
-      "pip install numexpr\n",
-      "pip install h5py\n",
-      "pip install tables\n",
-      "\n",
-      "#If you have problems importing tables, you might need to download and compile hdf5 library:\n",
-      "http://www.hdfgroup.org/HDF5/release/obtainsrc.html\n",
-      "\n",
-      "pip install pandas"
-     ]
-    },
-    {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "#statsmodels\n",
-      "pip install statsmodels\n",
-      "\n",
-      "#pymc\n",
-      "pip install pymc\n",
-      "\n",
-      "#bottleneck\n",
-      "pip install bottleneck\n",
-      "\n",
-      "#cythongsl\n",
-      "pip install cythongsl"
-     ]
-    },
-    {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "#Python for neuroscience\n",
-      "\n",
-      "pip install nibabel\n",
-      "\n",
-      "pip install dipy"
+      "# Installing Data analysis tools"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#References\n",
+      "### First create virtual environment\n",
       "\n",
-      "http://www.cs.dartmouth.edu/~nfoti/blog/blog/2012/07/17/setting-up-virtualenv-for-data-analysis-on-osx/"
+      "    mkvirtualenv <env_name>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Install packages\n",
+      "\n",
+      " IPython\n",
+      "    \n",
+      "    pip install ipython[all]\n",
+      "\n",
+      " Numpy\n",
+      "    \n",
+      "    pip install numpy\n",
+      "\n",
+      " Test numpy\n",
+      " \n",
+      "    pip install nose\n",
+      "    \n",
+      "    python -c 'import numpy; numpy.test()'\n",
+      "\n",
+      " Scipy\n",
+      "\n",
+      "    pip install scipy\n",
+      "\n",
+      "\n",
+      " Readline\n",
+      "\n",
+      "     easy_install readline\n",
+      "\n",
+      " Other dependencies\n",
+      "\n",
+      "    pip install python-dateutil sphinx pygments tornado"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "##### Graphical libraries for GUI building and IPython QT console\n",
+      "\n",
+      " We installed PySide globally and then linked to the environment\n",
+      "\n",
+      "    deactivate\n",
+      "    sudo pip3 install pyside\n",
+      "    workon <env_name>\n",
+      "    ln -s /usr/lib/python3/dist-packages/PySide $VIRTUAL_ENV/lib/python3/site-packages/PySide\n",
+      "\n",
+      " If you are using Python2.7:\n",
+      "\n",
+      "    ln -s /usr/lib/python2.7/dist-packages/Py $VIRTUAL_ENV/lib/python2.7/site-packages/PySide\n",
+      "\n",
+      "\n",
+      " If you prefer PyQt4:\n",
+      " \n",
+      "    deactivate\n",
+      "    sudo pip3 install pyqt4 \n",
+      " or \n",
+      "    \n",
+      "    sudo apt-get install python3-pyqt4\n",
+      "\n",
+      " Link in the environment:\n",
+      "  \n",
+      "    workon <env_name>\n",
+      "    ln -s /usr/lib/python3/dist-packages/PyQt4 $VIRTUAL_ENV/lib/python3/site-packages/PyQt4\n",
+      "\n",
+      " If using Python2.7:\n",
+      " \n",
+      "    ln -s /usr/lib/python2.7/dist-packages/PyQt4/ $VIRTUAL_ENV/lib/python2.7/site-packages/PyQt4"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "##### Other interesting modules\n",
+      "\n",
+      " matplotlib\n",
+      "\n",
+      "    pip install matplotlib\n",
+      "\n",
+      " Cython\n",
+      "\n",
+      "    pip install cython\n",
+      "\n",
+      " scikits\n",
+      "\n",
+      "    pip install scikit-learn\n",
+      "    pip install scikit-image\n",
+      "\n",
+      " Pandas\n",
+      "\n",
+      "    pip install numexpr\n",
+      "    pip install h5py\n",
+      "    pip install tables\n",
+      "\n",
+      " If you have problems importing tables, you might need to download and compile hdf5 library:\n",
+      "<http://www.hdfgroup.org/HDF5/release/obtainsrc.html>\n",
+      "\n",
+      "    pip install pandas"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " statsmodels\n",
+      "\n",
+      "    pip install patsy\n",
+      "    pip install statsmodels\n",
+      "\n",
+      " pymc\n",
+      "\n",
+      "    pip install pymc\n",
+      "\n",
+      " bottleneck\n",
+      "\n",
+      "    pip install bottleneck\n",
+      "\n",
+      " cythongsl\n",
+      "\n",
+      "    pip install cythongsl"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " Neuroscience tools:\n",
+      "\n",
+      "    pip install nibabel\n",
+      "\n",
+      "    pip install dipy"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### References\n",
+      "\n",
+      "<http://www.cs.dartmouth.edu/~nfoti/blog/blog/2012/07/17/setting-up-virtualenv-for-data-analysis-on-osx/>"
      ]
     }
    ],
