--- a/cURL.ipynb
+++ b/cURL.ipynb
@@ -11,31 +11,55 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
+      "echo '-w \"\\n\"' >> ~/.curlrc"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
       "server=http://127.0.0.1:8080/api\n",
       "\n",
-      "hjson='-H \"Content-Type: application/json\"'\n",
-      "hxml='-H \"Content-Type: application/xml\"'\n",
+      "req_hjson=\"Content-Type:application/json\"\n",
+      "req_hxml=\"Content-Type:application/xml\"\n",
+      "\n",
+      "resp_hjson=\"Accept:application/json\"\n",
+      "resp_hxml=\"Accept:application/xml\"\n",
       "\n",
       "header='json'\n",
       "#header='xml'\n",
       "if [ $header == 'json' ]\n",
       "then\n",
-      "    H=${hjson}\n",
+      "    H=${req_hjson}\n",
       "elif [ $header == 'xml' ]\n",
       "then\n",
-      "    H=${hxml}\n",
-      "fi\n",
+      "    H=${req_hxml}\n",
+      "fi"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "curl -H ${H} -X GET ${server}/user\n",
       "\n",
+      "curl -H ${req_hjson} -X POST -d '{\"name\": \"alexsavio\", \"age\":31}' -i ${server}/user\n",
       "\n",
-      "curl -i ${H} -X GET ${server}/user\n",
+      "curl -H ${H} -i ${server}/user\n",
       "\n",
-      "curl -i ${hjson} -X POST -d '{\"name\": \"alexsavio\", \"age\":31}' -i ${server}/user\n",
+      "curl -i ${server}/user/529e0fcab93af65cf5c7f919"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "curl -H ${req_hjson} -i ${server}/user/52a5d47db93af6517de9b336\n",
       "\n",
-      "curl ${H} -i ${server}/user\n",
+      "#copy the etag\n",
+      "etag_match=\"If-Match:3d4b3aa11bbb0652775ee92895c3de89da1f03bc\"\n",
       "\n",
-      "curl -i ${server}/user/529e0fcab93af65cf5c7f919\n",
-      "\n",
-      "curl -H \"X-HTTP-Method-Override\"  -d -i ${server}/user/529e0fcab93af65cf5c7f919"
+      "curl -H ${req_hjson} -H ${etag_match} -X PATCH -d '{\"age\":31}' -i ${server}/user/52a5d47db93af6517de9b336"
      ]
     }
    ],
