Improved the rest of notebooks for nbviewer

--- a/MongoDB settings.ipynb
+++ b/MongoDB settings.ipynb
@@ -8,60 +8,76 @@
   {
    "cells": [
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "mongo"
+      "# Setting up a MongoDB collection"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#As executed in buccaneer\n",
-      "db = db.getSiblingDB('admin')\n",
+      " Execute mongo shell:\n",
+      " \n",
+      "    mongo"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " Adding admin user (as executed in buccaneer):\n",
       "\n",
-      "db.addUser( { user: \"alexandre\",\n",
-      "              pwd: \"bottles beaches modified persuasive\",\n",
-      "              roles: [ \"userAdminAnyDatabase\" ] } )"
+      "    db = db.getSiblingDB('admin')\n",
+      "    \n",
+      "    db.addUser( { user: \"alexandre\",\n",
+      "                  pwd: \"****************************\",\n",
+      "                  roles: [ \"userAdminAnyDatabase\" ] } )"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "use admin\n",
-      "db.auth(\"alexandre\", \"bottles beaches modified persuasive\");\n",
+      " Adding collection admin user (as executed in buccaneer):\n",
       "\n",
-      "use sands\n",
-      "db.addUser( { user: \"sands\",\n",
-      "              pwd: \"unprepared ices false tripping\",\n",
-      "              roles: [ \"userAdmin\" ] } )\n"
+      "    use admin\n",
+      "    db.auth(\"alexandre\", \"**************************\");\n",
+      "    \n",
+      "    use sands\n",
+      "    db.addUser( { user: \"sands\",\n",
+      "                  pwd: \"**************************\",\n",
+      "                  roles: [ \"userAdmin\" ] } )\n"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#As executed in buccaneer\n",
-      "#GENERATING A KEY FILE\n",
-      "!openssl rand -base64 741 >> ~/Dropbox/Documents/work/sands/sands-edb/keyfile"
+      " Generating SSL key (as executed in buccaneer):\n",
+      "\n",
+      "    openssl rand -base64 741 >> ~/Dropbox/Documents/work/sands/sands-edb/keyfile"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#Edit /etc/mongodb.conf\n",
-      "Uncomment:\n",
+      "#### Edit /etc/mongodb.conf\n",
+      " \n",
+      " Uncomment:\n",
+      "\n",
       "    auth=true"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "!sudo service mongodb restart"
+      "#### Restart mongodb service:\n",
+      "\n",
+      "    sudo service mongodb restart"
      ]
     },
     {
