Added more neuroscience modules in data analysis.

--- a/Packages for data analysis.ipynb
+++ b/Packages for data analysis.ipynb
@@ -18,7 +18,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### First create virtual environment\n",
+      "#### First create virtual environment\n",
       "\n",
       "    mkvirtualenv <env_name>"
      ]
@@ -27,7 +27,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Install packages\n",
+      "#### Install packages\n",
       "\n",
       " IPython\n",
       "    \n",
@@ -42,11 +42,14 @@
       "    pip install nose\n",
       "    \n",
       "    python -c 'import numpy; numpy.test()'\n",
+      "    \n",
+      " Cython\n",
+      "    \n",
+      "    pip install cython    \n",
       "\n",
       " Scipy\n",
       "\n",
       "    pip install scipy\n",
-      "\n",
       "\n",
       " Readline\n",
       "\n",
@@ -61,7 +64,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##### Graphical libraries for GUI building and IPython QT console\n",
+      "#### Graphical libraries for GUI building and IPython QT console\n",
       "\n",
       " We installed PySide globally and then linked to the environment\n",
       "\n",
@@ -97,15 +100,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##### Other interesting modules\n",
+      "#### Other interesting modules\n",
       "\n",
       " matplotlib\n",
       "\n",
       "    pip install matplotlib\n",
-      "\n",
-      " Cython\n",
-      "\n",
-      "    pip install cython\n",
       "\n",
       " scikits\n",
       "\n",
@@ -135,7 +134,14 @@
       "\n",
       " pymc\n",
       "\n",
-      "    pip install pymc\n",
+      "    pip install pymc"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " #### Speed up execution\n",
       "\n",
       " bottleneck\n",
       "\n",
@@ -150,11 +156,23 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      " Neuroscience tools:\n",
+      " ### Neuroscience tools:\n",
       "\n",
+      " Nibabel\n",
+      " \n",
       "    pip install nibabel\n",
+      "    \n",
+      "    \n",
+      " Nipy* Dependencies:\n",
+      " \n",
+      "    pip install sphinx sympy networkx traits \n",
+      "    \n",
+      "    pip install nipy\n",
       "\n",
-      "    pip install dipy"
+      "    pip install nipype dipy nitime\n",
+      "\n",
+      "\n",
+      "(\\*) These tools only work on Python 2.* (in time of writing Dec 13th 2013):"
      ]
     },
     {
