Improved data analysis notebook.

--- a/Data analysis modules.ipynb
+++ b/Data analysis modules.ipynb
@@ -18,7 +18,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#### First create virtual environment\n",
+      "### First create virtual environment\n",
       "\n",
       "    mkvirtualenv <env_name>"
      ]
@@ -27,7 +27,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#### Install packages\n",
+      "### Install modules\n",
       "\n",
       " IPython\n",
       "    \n",
@@ -64,43 +64,73 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#### Graphical libraries for GUI building and IPython QT console\n",
+      "### Graphical libraries for GUI building and IPython QT console\n",
       "\n",
-      " We installed PySide globally and then linked to the environment\n",
+      "#### You can either install them inside the virtual environment:\n",
+      " \n",
+      "     pip install pyside\n",
       "\n",
-      "    deactivate\n",
+      " PyQt4 must be installed globally:\n",
+      " \n",
+      "     sudo apt-get install python3-pyqt4\n",
+      "   \n",
+      " or\n",
+      " \n",
+      "     sudo apt-get install python-pyqt4\n",
+      "     \n",
+      "\n",
+      "#### We recommend installing them globally then linking from the virtual environment:\n",
+      "\n",
+      " First install them:\n",
+      " \n",
       "    sudo pip3 install pyside\n",
-      "    workon <env_name>\n",
-      "    ln -s /usr/lib/python3/dist-packages/PySide $VIRTUAL_ENV/lib/python3/site-packages/PySide\n",
-      "\n",
-      " If you are using Python2.7:\n",
-      "\n",
-      "    ln -s /usr/lib/python2.7/dist-packages/Py $VIRTUAL_ENV/lib/python2.7/site-packages/PySide\n",
-      "\n",
-      "\n",
-      " If you prefer PyQt4:\n",
-      " \n",
-      "    deactivate\n",
-      "    sudo pip3 install pyqt4 \n",
-      " or \n",
       "    \n",
-      "    sudo apt-get install python3-pyqt4\n",
+      "    sudo apt-get install python3-qt4\n",
       "\n",
-      " Link in the environment:\n",
-      "  \n",
-      "    workon <env_name>\n",
-      "    ln -s /usr/lib/python3/dist-packages/PyQt4 $VIRTUAL_ENV/lib/python3/site-packages/PyQt4\n",
-      "\n",
-      " If using Python2.7:\n",
+      " or\n",
       " \n",
-      "    ln -s /usr/lib/python2.7/dist-packages/PyQt4/ $VIRTUAL_ENV/lib/python2.7/site-packages/PyQt4"
+      "    sudo pip install pyside\n",
+      "    \n",
+      "    sudo apt-get install python-qt4"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#### Other interesting modules\n",
+      " Then link them (with the virtualenv activated):\n",
+      " \n",
+      " In [2] we can see a script to link any library to the virtual environment (save it in, e.g. symlink_pyqt4_and_sip.sh and execute it):"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#!/bin/bash\n",
+      " \n",
+      "LIBS=( PyQt4 sip.so PySide )\n",
+      "PYTHON_VERSION=python$(python -c \"import sys; print (str(sys.version_info[0])+'.'+str(sys.version_info[1]))\")\n",
+      "VAR=( $(which -a $PYTHON_VERSION) )\n",
+      "GET_PYTHON_LIB_CMD=\"from distutils.sysconfig import get_python_lib; print (get_python_lib())\"\n",
+      "LIB_VIRTUALENV_PATH=$(python -c \"$GET_PYTHON_LIB_CMD\")\n",
+      "LIB_SYSTEM_PATH=$(${VAR[1]} -c \"$GET_PYTHON_LIB_CMD\")\n",
+      "     \n",
+      "for LIB in ${LIBS[@]}\n",
+      "do\n",
+      "# Make each library specified in LIBS available in our current virtual env\n",
+      "ln -s $LIB_SYSTEM_PATH/${LIB} $LIB_VIRTUALENV_PATH/${LIB}\n",
+      "done"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Other interesting modules\n",
       "\n",
       " matplotlib\n",
       "\n",
@@ -141,7 +171,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      " #### Speed up execution\n",
+      "### Speed up execution\n",
       "\n",
       " bottleneck\n",
       "\n",
@@ -156,7 +186,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      " ### Neuroscience tools:\n",
+      "### Neuroscience tools:\n",
       "\n",
       " Nibabel\n",
       " \n",
@@ -181,7 +211,9 @@
      "source": [
       "### References\n",
       "\n",
-      "<http://www.cs.dartmouth.edu/~nfoti/blog/blog/2012/07/17/setting-up-virtualenv-for-data-analysis-on-osx/>"
+      " 1. <http://www.cs.dartmouth.edu/~nfoti/blog/blog/2012/07/17/setting-up-virtualenv-for-data-analysis-on-osx/>\n",
+      "\n",
+      " 2. <http://calvinx.com/2012/11/03/ipython-qtconsole/>"
      ]
     }
    ],
