--- a/cURL.ipynb
+++ b/cURL.ipynb
@@ -39,7 +39,7 @@
       "    \n",
       "    header='json'\n",
       "    #header='xml'\n",
-      "    if [ $header == 'json' ]\n",
+      "    if [ $header == 'json' ];\n",
       "    then\n",
       "        H=${req_hjson}\n",
       "    elif [ $header == 'xml' ]\n",
