--- a/Virtualenv.ipynb
+++ b/Virtualenv.ipynb
@@ -25,9 +25,9 @@
      "source": [
       " Virtualenvwrapper .bashrc setup:\n",
       "\n",
-      "    echo \"export WORKON_HOME=~/envs\" >> .bashrc\n",
-      "    echo \"source /usr/local/bin/virtualenvwrapper.sh\" >> .bashrc\n",
-      "    echo \"export PIP_REQUIRE_VIRTUALENV=true\" >> .bashrc\n",
+      "    echo \"export WORKON_HOME=~/envs\" >> ~/.bashrc\n",
+      "    echo \"source /usr/local/bin/virtualenvwrapper.sh\" >> ~/.bashrc\n",
+      "    echo \"export PIP_REQUIRE_VIRTUALENV=true\" >> ~/.bashrc\n",
       "    source ~/.bashrc\n"
      ]
     },
@@ -111,7 +111,7 @@
      "source": [
       "#### Run ipython within the virtualenv:\n",
       "\n",
-      "    echo -e alias ipy=\\\"python -c 'import IPython; IPython.terminal.ipapp.launch_new_instance()'\\\"\n",
+      "    alias ipy=\\\"python -c 'import IPython; IPython.terminal.ipapp.launch_new_instance()'\\\"\n",
       "    ipy"
      ]
     },
@@ -122,6 +122,8 @@
       "#### Run ipython with other options:\n",
       "\n",
       " Add this to .bashrc:\n",
+      "\n",
+      "    alias ipy=\"python -c 'import IPython; IPython.terminal.ipapp.launch_new_instance()'\"\n",
       "\n",
       "    function ipyqt(){\n",
       "        python -c 'import IPython; IPython.start_ipython(['\"'\"'qtconsole'\"'\"']);'\n",
