Corrected cURL and added a notebook with steps for Intel MKL wit Numpy and Scipy.

--- a/cURL.ipynb
+++ b/cURL.ipynb
@@ -27,8 +27,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#### Setting up server variables\n",
-      "\n",
+      "#### Setting up server variables"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
       "    server=http://127.0.0.1:8080/api\n",
       "    \n",
       "    req_hjson=\"Content-Type:application/json\"\n",
@@ -52,8 +57,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#### First connection tests\n",
-      "\n",
+      "#### First connection tests"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
       "    curl -H ${H} -X GET ${server}/user\n",
       "    \n",
       "    curl -H ${req_hjson} -X POST -d '{\"name\": \"alexsavio\", \"age\":31}' -i ${server}/user\n",
@@ -67,12 +77,27 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#### Patching a document\n",
-      "\n",
-      "    curl -H ${req_hjson} -i ${server}/user/52a5d47db93af6517de9b336\n",
-      "    \n",
-      "Copy the etag\n",
-      "\n",
+      "#### Patching a document"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "    curl -H ${req_hjson} -i ${server}/user/52a5d47db93af6517de9b336"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Copy the etag"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
       "    etag_match=\"If-Match:3d4b3aa11bbb0652775ee92895c3de89da1f03bc\"\n",
       "    \n",
       "    curl -H ${req_hjson} -H ${etag_match} -X PATCH -d '{\"age\":31}' -i ${server}/user/52a5d47db93af6517de9b336"
